# crypkit_api

./: .gitignore  Dockerfile  README.md  database_migration.py  docker-compose.test.yaml  docker-compose.yaml  prometheus.yml  pyproject.toml  run_api.py
alembic/versions/: 3a2733584994_create_cryptocurrency_table.py
grafana/dashboards/: dashboard.json
src/config/: __init__.py
src/models/: base_model.py  cryptocurrency.py
src/models/schemas/: cryptocurrency.py
src/models/schemas/responses/: common.py  cryptocurrency.py
src/routers/: __init__.py  system.py
src/routers/v1/: __init__.py  cryptocurrencies.py
src/services/: __init__.py  coingecko.py
src/utils/: postgresql.py
tests/unit/routers/: conftest.py  test_system.py
tests/unit/routers/v1/: test_cryptocurrencies.py
