[tool.poetry]
name = "crypkit-api"
version = "0.1.0"
description = ""
authors = ["Miroslav Hlávka <miroslav.hlavka@heureka.cz>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"
alembic = "^1.7.7"
llconfig = "^2.0.1"
SQLAlchemy = "^1.4.35"
aiopg = "^1.3.3"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
